# C_Practice

./: README.MD
SLAM/ch2_helloworld/: libHelloWorld.h  useHello.cpp
SLAM/ch3_eigen/: CMakeLists.txt  coordinateTransform.cpp  eigenMatrix.cpp
SLAM/ch4_liegroup/: CMakeLists.txt  README.MD  useSophus.cpp
SLAM/ch6_optimization/: README.MD
ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.h  useHello.cpp
ch2_helloworld/: CMakeLists.txt  helloworld.cpp  libHelloWorld.cpp
ch3_eigen/: CMakeLists.txt  README.MD  eigenMatrix.cpp  plotTrajectory.cpp  useGeometry.cpp
ch4_liegroup/: CMakeLists.txt  README.MD  trajectoryError.cpp
